  Bug#14146 CHAR(...USING ...) and CONVERT(CHAR(...) USING...) produce different results ctype_utf8.result, ctype_utf8.test:   Adding test case. item_strfunc.cc: item_strfunc.h:   Moving the well formed checking code into a method,   to reuse in several Item_func_xxx. Reusing the new   method in Item_func_char and Item_func_charset_conv.

sql/item_strfunc.h:
  Bug#14146 CHAR(...USING ...) and CONVERT(CHAR(...) USING...) produce different results
  Moving the well formed checking code into a method,
  to reuse in several Item_func_xxx.
sql/item_strfunc.cc:
  Moving the well formed checking code into a method,
  to reuse in several Item_func_xxx.
mysql-test/t/ctype_utf8.test:
  Adding test case.
mysql-test/r/ctype_utf8.result:
  Adding test case.